<resources>
    <string name="app_name">instagram</string>
    <string name="or">OR</string>
    <string name="sign_up_with_facebook">Sign Up with Facebook</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Phone number, email or username</string>
    <string name="app_logo">App Logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forget_your_loginn_details">Forget your login details?</string>
    <string name="get_help_logging_in">Get help logging in.</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="edit_profile">Edit profile</string>
    <string name="back">Back</string>
    <string name="ok">Ok</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="link">Link</string>
    <string name="add_story">Add Story</string>
    <string name="liked_contents">Liked Contents</string>
    <string name="messages">Messages</string>
    <string name="user_story_item">User Story Item</string>
    <string name="content_menu">Content Menu</string>
    <string name="content_image">Content Image</string>
    <string name="like_content">like content</string>
    <string name="look_comments">Look Comments</string>
    <string name="send_another_person">Send Another Person</string>
    <string name="_10k_like">10K Like</string>
    <string name="item_content">Username + Lorem Ipsum Dolor</string>
    <string name="_1m">1M</string>
    <string name="posts">Posts</string>
    <string name="follower">Followers</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="message">Message</string>
    <string name="flash_button">flash button</string>
    <string name="story">Story</string>
    <string name="Search">Search</string>
    <string name="sign_up_with_email">Sign Up With Email</string>
    <string name="share_post">Share Post</string>
    <string name="description">Description</string>
</resources>