<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.Profile.ProfileEditFragment"
    tools:ignore="Autofill">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:foregroundGravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/edit_profile"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/ok"
            android:src="@drawable/ic_okay"
            app:tint="@color/blue" />
    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgProfile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:contentDescription="@string/profile_photo"
        android:src="@drawable/ic_person"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

    <Button
        android:id="@+id/btnChangeProfilePhoto"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_profile_photo"
        android:textAllCaps="false"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="20dp" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="20dp" />

    <EditText
        android:id="@+id/edtBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bio"
        android:inputType="textMultiLine"
        android:lines="2"
        android:maxLines="5"
        android:padding="20dp" />


    <EditText
        android:id="@+id/edtLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/link"
        android:inputType="text"
        android:padding="20dp" />

</LinearLayout>