<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxHeight="450dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgProfile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_person"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

        <TextView
            android:id="@+id/txtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/content_menu"
            android:src="@drawable/ic_dots" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/imgContent"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/content_image"
        android:maxHeight="300dp"
        android:src="@drawable/ic_launcher_background" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnLike"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/like_content"
            android:src="@drawable/ic_heart" />

        <ImageView
            android:id="@+id/btnComment"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/look_comments"
            android:src="@drawable/ic_chat" />

        <ImageView
            android:id="@+id/btnSend"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/send_another_person"
            android:src="@drawable/ic_send" />

        <ImageView
            android:id="@+id/btnAddBookmark"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/send_another_person"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_bookmark" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/txtLikeSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/_10k_like"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:lines="3"
        android:maxLines="3"
        android:text="@string/item_content"
        android:textStyle="bold" />
</LinearLayout>