<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.Profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">


        <TextView
            android:id="@+id/txtUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_dots" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:maxHeight="100dp"
            android:src="@drawable/ic_launcher_background"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtPostcount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1m"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posts"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtFollowercount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1m"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follower"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtFollwingcount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1m"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/app_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txtLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/blue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnFollow"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/follow"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnSendMessage"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/message"
            android:textAllCaps="false"
            android:textColor="@color/black" />


        <Button
            android:id="@+id/btnEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/edit_profile"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/btnSharePerson"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="0"
            android:src="@drawable/ic_person_add" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profileStoryRenderer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:visibility="gone" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:elevation="0dp"
        app:menu="@menu/profile_menu" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profilePhotoRenderer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" />


</LinearLayout>