<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Story.StoryFragment">

    <ImageView
        android:id="@+id/imgStory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/add_story"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher_background" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnFlash"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/nil"
            android:contentDescription="@string/flash_button"
            android:src="@drawable/ic_flash_off"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/nil"
            android:contentDescription="@string/back"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_close"
            app:tint="@color/white" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imgStory"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:src="@color/gray"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:src="@color/gray"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:src="@color/gray"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:src="@color/gray"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">


            <ImageButton
                android:id="@+id/btnOpenPhotos"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/nil"
                android:scaleType="fitStart"
                android:src="@drawable/ic_folder"
                app:tint="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/story"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


            <ImageButton
                android:id="@+id/btnChangeCamera"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/nil"
                android:scaleType="fitEnd"
                android:src="@drawable/ic_change_camera"
                app:tint="@color/white" />


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>